"29.11.2021 Giphy don't work, read docs!"

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,10 @@
 server.port=8001
+#open_exchange
 open_exchange.app_id=a864d23ee7fc4d328059a9114d3b6daa
 open_exchange.url=https://openexchangerates.org/api
+
+#giphy
+giphy.client.url=https://giphy.com
+giphy.rich=https://giphy.com/search/rich
+giphy.broke=https://giphy.com/search/broke
+giphy.API.key=bTA5SSQkRzh7Igbvx0B9LlE22pZuFDzS
